--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2364,7 +2364,7 @@ input:-webkit-autofill:active
 .video-popup{
     padding: 11rem 0;
     margin-bottom: -100px;
-    background: url(../images/popup_bg.jpg) no-repeat center center;
+    background: url(../images/years_img.png) no-repeat center center;
     text-align: center;
     overflow: hidden;
     color: #FFF;
